# picar

./: .gitignore  Dockerfile  README.md  justfile  pyproject.toml
.github/workflows/: docker-hub-push.yml
src/: api.py  car_manager.py  entrypoint.py
src/templates/: index.html
